fixing some dumb text

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h2>About Me</h2>
                   </p>
                     
-                <p>Now, as a future computer scientist, I am adept in both high-level and low-level languages. In the hardware realm, I have experience with circuitry and embedded devices. Everyday I am coding and doing my best to advance in the languages I already know and love, as well as learning new languages to add to my repertoire.  Whether it be through school or on my own, I am always looking for experiences that will allow me to grow as a computer engineer and a Girl Who Codes. </p>
+                <p>Now, as a future computer scientist, I am adept in both high-level and low-level languages. In the hardware realm, I have experience with circuitry and embedded devices. Everyday I am coding and doing my best to advance in the languages I already know and love, as well as learning new languages to add to my repertoire.  Whether it be through school or on my own, I am always looking for experiences that will allow me to grow as a computer scientist. </p>
             </div>
         </section>
       
