--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="links">
           <ul>
               <li><div class="grow"><a href="http://github.com/gauravdesale" target="_blank"><i class="fa fa-github"></i></a></div></li>
-              <li><div class="grow"><a href="https://www.linkedin.com/in/emily-grau-94b6a6131/" target="_blank"><i class="fa fa-linkedin"></i></a></div></li>
+              <li><div class="grow"><a href="https://www.linkedin.com/in/" target="_blank"><i class="fa fa-linkedin"></i></a></div></li>
               <li><div class="grow"><a href="/Resume.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a></div></li>
               <li><div class="grow"><a href="mailto:gdesale2@illinois.edu"><i class="fa fa-envelope"></i></a></div></li>
           </ul>
